--- a/_pages/8.html
+++ b/_pages/8.html
@@ -162,7 +162,7 @@
           </div>
 
           <div class="bottom-section-spacer-sm">
-            <h2 id="01" class="modified-heading bottom-section-spacer-sm">
+            <h2 id="01" class="bottom-section-spacer-sm">
               <span class="modified-heading">
                 Strategic themes for 2023-2026</span
               >
@@ -198,9 +198,7 @@
 
       <div class="row marg rbeh">
         <div class="col-lg-6 col-md-6">
-          <div
-            class="card-community card-1 halton-card card card-icon icon-person rbeh-item"
-          >
+          <div class="halton-card card card-icon icon-person rbeh-item">
             <div class="card-body">
               <h3 class="card-title">
                 <span class="modified-heading">Community Well-Being</span>
@@ -238,9 +236,7 @@
         </div>
 
         <div class="col-lg-6 col-md-6">
-          <div
-            class="card-community card-2 halton-card card card-icon icon-graph-up-arrow rbeh-item"
-          >
+          <div class="halton-card card card-icon icon-graph-up-arrow rbeh-item">
             <div class="card-body">
               <h3 class="card-title">
                 <span class="modified-heading">Infrastructure and Growth</span>
@@ -279,7 +275,7 @@
 
         <div class="col-lg-6 col-md-6">
           <div
-            class="card-community card-3 halton-card card card-icon icon-thermometer-sun rbeh-item"
+            class="halton-card card card-icon icon-thermometer-sun rbeh-item"
           >
             <div class="card-body">
               <h3 class="card-title">
@@ -320,9 +316,7 @@
         </div>
 
         <div class="col-lg-6 col-md-6">
-          <div
-            class="card-community card-1 halton-card card card-icon icon-award-1 rbeh-item"
-          >
+          <div class="halton-card card card-icon icon-award-1 rbeh-item">
             <div class="card-body">
               <h3 class="card-title">
                 <span class="modified-heading">Excellence in Government</span>
