Fixed the changes requested

--- a/_pages/8.html
+++ b/_pages/8.html
@@ -162,7 +162,7 @@
           </div>
 
           <div class="bottom-section-spacer-sm">
-            <h2 id="01" class="bottom-section-spacer-sm">
+            <h2>
               <span class="modified-heading">
                 Strategic themes for 2023-2026</span
               >
@@ -221,16 +221,16 @@
                   directions.
                 </li>
                 <div class="bottom-section-spacer-sm"></div>
-                <p>
-                  Learn about the actions and measures for Community Well-Being
-                  by visiting
-                  <a href=""
-                    ><span class="text-color">
-                      page 10 in the 2023-2026 Strategtic Business Plan</span
-                    ></a
-                  >
-                </p>
               </ul>
+              <p>
+                Learn about the actions and measures for Community Well-Being by
+                visiting
+                <a href=""
+                  ><span class="text-color">
+                    page 10 in the 2023-2026 Strategtic Business Plan</span
+                  ></a
+                >
+              </p>
             </div>
           </div>
         </div>
@@ -259,16 +259,16 @@
                   transportation on Regional roads.
                 </li>
                 <div class="bottom-section-spacer-sm"></div>
-                <p>
-                  Learn about the actions and measures for Infrastructure and
-                  Growth by visiting
-                  <a href=""
-                    ><span class="text-color">
-                      page 16 in the 2023-2026 Strategic Business Plan</span
-                    ></a
-                  >
-                </p>
               </ul>
+              <p>
+                Learn about the actions and measures for Infrastructure and
+                Growth by visiting
+                <a href=""
+                  ><span class="text-color">
+                    page 16 in the 2023-2026 Strategic Business Plan</span
+                  ></a
+                >
+              </p>
             </div>
           </div>
         </div>
@@ -301,16 +301,16 @@
                   directions.
                 </li>
                 <div class="bottom-section-spacer-sm"></div>
-                <p>
-                  Learn about the actions and measures for Community Well-Being
-                  by visiting
-                  <a href=""
-                    ><span class="text-color">
-                      page 10 in the 2023-2026 Strategtic Business Plan</span
-                    ></a
-                  >
-                </p>
               </ul>
+              <p>
+                Learn about the actions and measures for Community Well-Being by
+                visiting
+                <a href=""
+                  ><span class="text-color">
+                    page 10 in the 2023-2026 Strategtic Business Plan</span
+                  ></a
+                >
+              </p>
             </div>
           </div>
         </div>
@@ -356,7 +356,7 @@
         <!--------------->
         <div class="col-md-12 col-sm-12 bx-container">
           <div class="bottom-section-spacer-sm">
-            <h2 id="01" class="bottom-section-spacer-sm">
+            <h2>
               <span class="modified-heading"> Monitoring and reporting</span>
             </h2>
 
