Updated pull request

--- a/_pages/3.html
+++ b/_pages/3.html
@@ -16,6 +16,15 @@
 
 <body>
     <div class="halton-features-wrapper container-fluid">
+        <!-- Mendatory template -->
+        <!-- Mendatory template -->
+
+
+
+
+
+
+
         <div class="bottom-section-spacer"></div>
 
         <div class="row halton-features-wrapper">
@@ -38,7 +47,7 @@
                     <h2 id="02" class="section-title">Contact us</h2>
 
                     <div class="row rbeh">
-                        <div class="col-lg-4">
+                        <div class="col-lg-4 bx-container">
                             <div class="halton-card card card-icon icon-mail rbeh-item">
                                 <div class="card-body">
                                     <h3 class="card-title">Online</h3>
@@ -55,7 +64,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4">
+                        <div class="col-lg-4 bx-container">
                             <div class="halton-card card card-icon icon-cellphone rbeh-item">
                                 <div class="card-body">
                                     <h3 class="card-title">Call 311</h3>
@@ -68,7 +77,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4">
+                        <div class="col-lg-4 bx-container">
                             <div class="halton-card card card-icon icon-mappin rbeh-item">
                                 <div class="card-body">
                                     <h3 class="card-title">Visit us</h3>
@@ -176,13 +185,18 @@
 
             </div>
         </div>
+
+
+
+
+
+
+
+
+
+        <!-- Mendatory template -->
+        <!-- Mendatory template -->
     </div>
-
-
-
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
