--- a/_pages/4.html
+++ b/_pages/4.html
@@ -15,7 +15,7 @@
 
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid bx-container">
         <div class="bottom-section-spacer"></div>
 
         <div class="row halton-features-wrapper">
