bootstrap class removed. ul replaced with div

--- a/_pages/9.html
+++ b/_pages/9.html
@@ -44,46 +44,46 @@
           <div class="bottom-section-spacer">
             <h3>Growth & Development</h3>
 
-            <ul class="no-padding">
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >Children need to learn how to move</a
               >
-            </ul>
-            <ul class="no-padding">
+            </div>
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >Help your child prepare for adolescence</a
               >
-            </ul>
-            <ul class="no-padding">
+            </div>
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >Keeping Your Child's Teeth Healthy</a
               >
-            </ul>
-            <ul class="no-padding">
+            </div>
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >How much sleep does my child/youth need?</a
               >
-            </ul>
-            <ul class="no-padding">
+            </div>
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >The 40 developmental Assets&reg;
               </a>
-            </ul>
+            </div>
           </div>
         </div>
 
@@ -91,30 +91,30 @@
           <div class="bottom-section-spacer">
             <h3>Healthy Eating</h3>
 
-            <ul class="no-padding">
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >Family meals
               </a>
-            </ul>
-            <ul class="no-padding">
+            </div>
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >Healthy snack ideas</a
               >
-            </ul>
-            <ul class="no-padding">
+            </div>
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >Nutrition and Healthy Teeth</a
               >
-            </ul>
+            </div>
           </div>
         </div>
 
@@ -122,86 +122,86 @@
           <div class="bottom-section-spacer">
             <h3>Mental Health & Emotional Well-Being</h3>
 
-            <ul class="no-padding">
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >Building self esteem</a
               >
-            </ul>
-            <ul class="no-padding">
+            </div>
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >Social-Emotional Learning</a
               >
-            </ul>
-            <ul class="no-padding">
+            </div>
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >Kids and stress</a
               >
-            </ul>
-            <ul class="no-padding">
+            </div>
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >Mindfulness
               </a>
-            </ul>
-            <ul class="no-padding">
+            </div>
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >Raising resilient Children
               </a>
-            </ul>
-            <ul class="no-padding">
+            </div>
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >Relationships and Resilience
               </a>
-            </ul>
-            <ul class="no-padding">
+            </div>
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >Self-regulation
               </a>
-            </ul>
-            <ul class="no-padding">
+            </div>
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >Separation anxiety
               </a>
-            </ul>
-            <ul class="no-padding">
+            </div>
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >The overscheduled parent and child: Finding a balance
               </a>
-            </ul>
-            <ul class="no-padding">
+            </div>
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >Your mental health
               </a>
-            </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -210,38 +210,38 @@
           <div class="bottom-section-spacer">
             <h3>Parenting and Schools</h3>
 
-            <ul class="no-padding">
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >Parent engagement in schools
               </a>
-            </ul>
-            <ul class="no-padding">
+            </div>
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >Support your child in school</a
               >
-            </ul>
-            <ul class="no-padding">
+            </div>
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >Tips for home work success</a
               >
-            </ul>
-            <ul class="no-padding">
+            </div>
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >Your child's asthma at school: tips for parents</a
               >
-            </ul>
+            </div>
           </div>
         </div>
 
@@ -249,52 +249,52 @@
           <div class="bottom-section-spacer">
             <h3>Safety and injury Prevention</h3>
 
-            <ul class="no-padding">
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >Walking to school safely
               </a>
-            </ul>
-            <ul class="no-padding">
+            </div>
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >Bike and Helmet Safety</a
               >
-            </ul>
-            <ul class="no-padding">
+            </div>
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >Internet safety</a
               >
-            </ul>
+            </div>
           </div>
         </div>
         <div class="col-md-4 col-sm-12">
           <div class="bottom-section-spacer">
             <h3>Substance Use</h3>
 
-            <ul class="no-padding">
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >Talking with your teen about vaping
               </a>
-            </ul>
-            <ul class="no-padding">
+            </div>
+            <div>
               <a
                 class="text-icon text-icon-before icon-external"
                 target="_blank"
                 href=""
                 >Talking with your kids about substance use</a
               >
-            </ul>
+            </div>
           </div>
         </div>
       </div>
